# pre-support-aws

./: README.md
api/: .gitignore  README.md  app.py  pyproject.toml
api/.chalice/: config.json
api/.chalice/deployed/: dev.json
ci/: one-click-deploy.md
ui/: .gitignore  env.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: DemoLayout.tsx  index.css  main.jsx  vite-env.d.ts
ui/src/components/: Assistant.tsx  AssistantToggle.tsx  Dialog.tsx  Layout.tsx  __Assistant copy.tsx  styles.css
ui/src/func/: useDialogAPI.ts
